[Dev] [Catalog] Fixed code review yesterday (#16)
* update unit test for grid card and ca

* update search code

* update redeem

* Upload html/css redeem page and search block

* upload search.scss

* update search bar

* edit wrong font

* edit positiion redeem block

* filter course by term in search bar

* Edit the result block overlaps search bar

* remove debug and comment code

* import lodash

* update search by id and creator

* update css for stylelint

* revert code carousel (transition ver 1)

* reset auto slide when return from search page

* NTI-4347: remove redeem bar (#6686 on redmine)

* fix compile error

* update placeholder for search bar

* update carousel

* fix animation in carousel

* NTI-4366: fixed

* fix some bug when get api

* remove console.log

* format code for build

* fixed unit test errors

* fix bug NTI-4359, NTI-4362

* update redeem tab

* change single quote for warning

* remove var variables

* fix bug when redeem empty

* update enroll status

* fix error when run build

* fix some warning with enroll

* fix warning <a> cannot appear as a descendant of <a>

* handle err when call getEnrollOptions

* update style for redeem input when error

* bug NTI-4362: fix css margin

* using service from NT to call API

* using getService from nti-web-client instead service from props

* codeValue default is '' not null

* fix bug NTI-4363: course cards image zooming inconsistent with rest of site

* open course detail when click on carousel item

* update css for grid card

* show course detail popup when redeem success and return course page

* update css for grid card

* refactor

* refactor

* change creator to instructor and update missing code

* update loading and empty component

* refactor

* refactor

* refactor

* refactor

* update search by instructors

*  change the [Empty Header] text to "You don't have any course

--- a/src/components/Catalog.scss
+++ b/src/components/Catalog.scss
@@ -4,6 +4,7 @@
 	min-width: 100%;
 	background-color: #fff;
 	max-width: 100%;
+	min-height: calc(100vh - 70px);
 }
 
 .course-catalog {
